subida de la plantilla 01 ale web 2

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 
     <!--------------------IMAGEN PARA COMPARTIR WEB--------------------------------->
     <!-- AQUI va la imagen que se mostrara cuando se comparta la pagina a otras aplicaciones, es una imagen pequeña con el link y el texto de referencia -->
-    <meta property="og:image" content="#" />
+    <meta property="og:image" content="../img/02-logos/logoheader1.png" />
     <!--------------------------------------------------------------->
 
     <!----------------------------TITULO------------------------------->
