--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -17,7 +17,8 @@
 
   <!--------------------IMAGEN PARA COMPARTIR WEB--------------------------------->
   <!-- AQUI va la imagen que se mostrara cuando se comparta la pagina a otras aplicaciones, es una imagen pequeña con el link y el texto de referencia -->
-  <meta property="og:image" content="#" />
+  <meta property="og:image" content="../img/02-logos/logoheader1.png" />
+
   <!--------------------------------------------------------------->
 
   <!----------------------------TITULO------------------------------->
@@ -42,6 +43,9 @@
   <!--------------------CSS LINK PERSONALIZADO-------------------------->
   <link rel="stylesheet" href="../css/estilo.css" />
   <!--------------------------------------------------------------->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
+
   <!-- ----------------------TIPOGRAFIAS A AGREGAR------------------------->
   <!-- Enlaces a fuentes de Google Fonts y otros recursos de tipografía -->
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
@@ -324,7 +328,8 @@
 
 
   <!--------------------------------------------------------------->
-  <!---------------Enlace a BOOTSTRAP DATA ---------------------->
+  <div id="toastify-container"></div>
+    <!---------------Enlace a BOOTSTRAP DATA ---------------------->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
@@ -338,9 +343,9 @@
   <!--------------------------------------------------------------->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
   <!--------------------------------------------------------------->
 
-  <div id="toastify-container"></div>
 </body>
 <!------------------------------FIN BODY-------------------------->
 <!--------------------------------------------------------------->
