segui mejorando carrito y responsive 1

--- a/pages/tienda-pago.html
+++ b/pages/tienda-pago.html
@@ -190,7 +190,7 @@
 
 
 
-
+ 
     <!-------------------------INICIO FOOTER------------------------>
     <hr class="border border border-1 opacity-2" />
 
@@ -202,31 +202,31 @@
         </div>
   
         <div class="linksFooter">
-          <div>
+          <div class="textoMovimiento">
             <a href="#" target="_blank">
               <i class="bi bi-instagram"></i> Instagram
               <i class="bi bi-instagram"></i>
             </a>
           </div>
-          <div>
+          <div class="textoMovimiento">
             <a href="#" target="_blank">
               <i class="bi bi-youtube"></i> Canal de Youtube
               <i class="bi bi-youtube"></i>
             </a>
           </div>
-          <div>
+          <div class="textoMovimiento">
             <a href="#" target="_blank">
               <i class="bi bi-facebook"></i> Facebook
               <i class="bi bi-facebook"></i>
             </a>
           </div>
-          <div>
+          <div class="textoMovimiento">
             <a href="#" target="_blank">
               <i class="bi bi-twitter"></i> X (Twitter)
               <i class="bi bi-twitter-x"></i>
             </a>
           </div>
-          <h6>
+          <h6 class="tituloPequeño4">
             <i class="bi bi-person-arms-up"></i> Desarrollo Gondra World Dev <i class="bi bi-person-arms-up"></i>
           </h6>
         </div>
@@ -242,14 +242,20 @@
     <!------------------------------FIN FOOTER-------------------------->
     <!--------------------------------------------------------------->
 
+
+
+
     <!----------------------BOTON WHATTSAPP------------------------------>
+ 
     <p id="telefonoWhattsapp"> <a
       href="https://api.whatsapp.com/send?phone=..............&text=Hola!,%20en%20que%20puedo%20ayudarte?"
       target="_blank">
-      <img class="logoWhats" src="../img/02-logos/logowhattsapp1.png" alt="imgwhattsapp1">
-    </a>
+      <img class="logoWhats textoMovimiento" src="../img/02-logos/logowhattsapp1.png" alt="imgwhattsapp1">
+     </a>
   </p>
-  <!--------------------------------------------------------------------------->
+
+<!----------------------------------------------------------------------->
+
 
 
     <!--------------------------------------------------------------->
