--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -266,65 +266,69 @@
 
 
 
-  <!-------------------------INICIO FOOTER------------------------>
-  <hr class="border border border-1 opacity-2" />
 
-  <footer class="gridPadre">
+    <!-------------------------INICIO FOOTER------------------------>
+    <hr class="border border border-1 opacity-2" />
 
-    <div class="footerElements">
-      <div class="img1Footer">
-        <img class="imagen-limitada2 img-fluid" src="../img/08-favicon/logopequeño1.png" alt="footerimagen1" />
+    <footer class="gridPadre">
+  
+      <div class="footerElements">
+        <div class="img1Footer">
+          <img class="imagen-limitada2 img-fluid" src="../img/08-favicon/logopequeño1.png" alt="footerimagen1" />
+        </div>
+  
+        <div class="linksFooter">
+          <div class="textoMovimiento">
+            <a href="#" target="_blank">
+              <i class="bi bi-instagram"></i> Instagram
+              <i class="bi bi-instagram"></i>
+            </a>
+          </div>
+          <div class="textoMovimiento">
+            <a href="#" target="_blank">
+              <i class="bi bi-youtube"></i> Canal de Youtube
+              <i class="bi bi-youtube"></i>
+            </a>
+          </div>
+          <div class="textoMovimiento">
+            <a href="#" target="_blank">
+              <i class="bi bi-facebook"></i> Facebook
+              <i class="bi bi-facebook"></i>
+            </a>
+          </div>
+          <div class="textoMovimiento">
+            <a href="#" target="_blank">
+              <i class="bi bi-twitter"></i> X (Twitter)
+              <i class="bi bi-twitter-x"></i>
+            </a>
+          </div>
+          <h6 class="tituloPequeño4">
+            <i class="bi bi-person-arms-up"></i> Desarrollo Gondra World Dev <i class="bi bi-person-arms-up"></i>
+          </h6>
+        </div>
+  
+        <div class="img2Footer">
+          <img class="imagen-limitada2 img-fluid" src="../img/08-favicon/logopequeño2.png"  alt="footerimagen2" />
+        </div>
+  
       </div>
 
-      <div class="linksFooter">
-        <div>
-          <a href="#" target="_blank">
-            <i class="bi bi-instagram"></i> Instagram
-            <i class="bi bi-instagram"></i>
-          </a>
-        </div>
-        <div>
-          <a href="#" target="_blank">
-            <i class="bi bi-youtube"></i> Canal de Youtube
-            <i class="bi bi-youtube"></i>
-          </a>
-        </div>
-        <div>
-          <a href="#" target="_blank">
-            <i class="bi bi-facebook"></i> Facebook
-            <i class="bi bi-facebook"></i>
-          </a>
-        </div>
-        <div>
-          <a href="#" target="_blank">
-            <i class="bi bi-twitter"></i> X (Twitter)
-            <i class="bi bi-twitter-x"></i>
-          </a>
-        </div>
-        <h6>
-          <i class="bi bi-person-arms-up"></i> Desarrollo Gondra World Dev <i class="bi bi-person-arms-up"></i>
-        </h6>
-      </div>
 
-      <div class="img2Footer">
-        <img class="imagen-limitada2 img-fluid" src="../img/08-favicon/logopequeño2.png"  alt="footerimagen2" />
-      </div>
+    </footer>
+    <!------------------------------FIN FOOTER-------------------------->
+    <!--------------------------------------------------------------->
 
-    </div>
-
-
-  </footer>
-  <!------------------------------FIN FOOTER-------------------------->
-  <!--------------------------------------------------------------->
-
+    
     <!----------------------BOTON WHATTSAPP------------------------------>
+ 
     <p id="telefonoWhattsapp"> <a
       href="https://api.whatsapp.com/send?phone=..............&text=Hola!,%20en%20que%20puedo%20ayudarte?"
       target="_blank">
-      <img class="logoWhats" src="../img/02-logos/logowhattsapp1.png" alt="imgwhattsapp1">
-    </a>
+      <img class="logoWhats textoMovimiento" src="../img/02-logos/logowhattsapp1.png" alt="imgwhattsapp1">
+     </a>
   </p>
-  <!--------------------------------------------------------------------------->
+
+<!----------------------------------------------------------------------->
 
 
   <!--------------------------------------------------------------->
