subiendo nueva plantilla 1

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -143,11 +143,11 @@
         <hr class="border border border-2 opacity-10">
 
 
-        <p class="objetoCentrado1 estiloContacto1 textoMovimiento"><span class="card1"><i
-              class="bi bi-envelope objetoCentrado1"></i>
-            Escribinos un
-            mail a: <a href="mailto:............@gmail.com" target="_blank"><i class="bi bi-person-arms-up"></i>
-              ............@gmail.com <i class="bi bi-person-arms-up"></i></a></span></p>
+         <p class="objetoCentrado1 estiloContacto1 textoMovimiento"> <i
+            class="bi bi-envelope objetoCentrado1"></i><span class="card1">
+              Escribinos un mail a: <a href="mailto: bavaroalejandro@gmail.com" target="_blank"><i
+                  class="bi bi-person-arms-up"></i>
+                bavaroalejandro@gmail.com <i class="bi bi-person-arms-up"></i></a></span></p>
 
         <span class="objetoCentrado1 estiloContacto1">
           <a href="https://api.whatsapp.com/send?phone=............&text=Hola!,%20en%20que%20puedo%20ayudarte?"
