empezando con reat, instale vite 1

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!----------------------------TITULO------------------------------->
   <!-- Título de la página -->
-  <title>Home - Titulo Web</title>
+  <title>Home - Feri-Usados Web</title>
   <!--------------------------------------------------------------->
 
   <!-------------------LINKS ENLACES RECURSOS EXTERNOS-------------------->
