--- a/pages/tienda-pago.html
+++ b/pages/tienda-pago.html
@@ -22,7 +22,7 @@
 
     <!----------------------------TITULO------------------------------->
     <!-- Título de la página -->
-    <title>Tienda-Pago - Titulo Web</title>
+    <title>Tienda-Pago - Feri-Usado</title>
     <!--------------------------------------------------------------->
 
     <!-------------------LINKS ENLACES RECURSOS EXTERNOS-------------------->
