--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -23,7 +23,7 @@
 
   <!----------------------------TITULO------------------------------->
   <!-- Título de la página -->
-  <title>Tienda - Titulo Web</title>
+  <title>Tienda - Feri-Usados</title>
   <!--------------------------------------------------------------->
 
   <!-------------------LINKS ENLACES RECURSOS EXTERNOS-------------------->
